# sdlgl-example

./: CMakeLists.txt  install_android.sh  run.sh  start_nvim_project.sh
src/: main.c  shader.c  shader.h
